--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -79,7 +79,7 @@
                                     <div class="col-2">
                                         <div class="form-floating">
                                             <select class="form-select" id="documentacion" [(ngModel)]="documentacion" name="documentacion">
-                                                <option *ngFor="let tipoDoc of listaDocumentacion" [ngValue]="tipoDoc.idDocumentacion">
+                                                <option *ngFor="let tipoDoc of listatipoDocumentacion" [ngValue]="tipoDoc.idDocumentacion">
                                                 {{ tipoDoc.documentacion | uppercase }}
                                                 </option>
                                             </select>
