--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -282,12 +282,9 @@
                                             />
                                         </td>
                                         <td>
-                                            <select class="form-select" id="floatingSelect" [(ngModel)]="faseProyecto"
-                                                name="tipoOperacion">
-                                                <option value="1">{{ proyecto.detalleProyectoResponse.faseProy }}</option>
-                                                <option value="2">Tipo 2</option>
-                                                <option value="3">Tipo 3</option>
-                                                <option value="4">Tipo 4</option>
+                                            <select class="form-select" id="floatingSelect" [(ngModel)]="faseProyecto" name="tipoOperacion">
+                                                <option value="">{{ proyecto.detalleProyectoResponse.faseProy }}</option>
+                                                <option *ngFor="let fase of listatipoFase" [ngValue]="fase.idFase">{{ fase.fase }}</option>
                                             </select>
                                         </td>
                                         <td>    
